gap fix

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body, html {
 }
 
 .gap{
-    height: 220px;
+    height: 170px;
     /* width: 150px; */
     background-color: transparent;
 }
